[package]

name = "rust-play"
version = "0.0.1"
authors = ["json <jasons@code42.com>"]

[dependencies.allegro]
git = "https://github.com/SiegeLord/RustAllegro.git"

[dependencies.allegro_font]
git = "https://github.com/SiegeLord/RustAllegro.git"

[dependencies.allegro_image]
git = "https://github.com/SiegeLord/RustAllegro.git"

[dependencies.allegro_primitives]
git = "https://github.com/SiegeLord/RustAllegro.git"

[dependencies.allegro_ttf]
git = "https://github.com/SiegeLord/RustAllegro.git"
